fix(mobile-tasks-feature-add-task): fix form validators errors on template
add new get f() to recover formControls, fix validators errors not showing on Form Template,
migrated to Ionic v7.1.2, added new SCSS logic for ion-select Icon so it flips now

#4

--- a/apps/mobile/src/styles.scss
+++ b/apps/mobile/src/styles.scss
@@ -993,3 +993,12 @@ ion-skeleton-text {
 ion-avatar ion-skeleton-text {
   --border-radius: 50%;
 }
+
+/* Select Icon Flip Behavior */
+ion-select.always-flip::part(icon) {
+  transition: transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+ion-select.always-flip.select-expanded::part(icon) {
+  transform: rotate(180deg);
+}
